css/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
    transition: background-color 300ms, color 300ms;
}

/* Custom Properties, update these for your own design */

:root {
    --ff-primary: 'Source Sans Pro', sans-serif;
    --ff-secondary: 'Source Code Pro', monospace;
    
    --fw-reg: 300;
    --fw-bold: 900;
    
    --clr-light: #fff;
    --clr-secondary-dark: #8DA6CE;
    --clr-dark: #1B0F0E;
    --clr-accent: #E9C70D;
    
    --fs-h1: 3rem;
    --fs-h2: 2.25rem;
    --fs-h3: 1.25rem;
    --fs-body: 1rem;
    
    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
          0.125em 0.125em 0.25em rgba(0,0,0,.15);
}

:root.dark {
    --clr-light: #899098;
    --clr-secondary-dark: #1B0F0E;
    --clr-dark: #fff;
    --clr-accent: #F0BF73;
}

@media (min-width: 800px) {
    :root {
        --fs-h1: 4.5rem;
        --fs-h2: 3.75rem;
        --fs-h3: 1.5rem;
        --fs-body: 1.125rem;
    }
}

/* General styles */

html {
    scroll-behavior: smooth;
}


body {
    background-color: var(--clr-light);
    color: var(--clr-dark);
    margin: 0;
    font-family: var(--ff-primary);
    font-size: var(--fs-body);
    line-height: 1.6;
}

body.dark {
    background-color: var(--clr-secondary-dark);
}

section {
    padding: 5em 2em;
}

img {
    display: block;
    max-width: 100%;
}

strong { font-weight: var(--fw-bold) }

:focus {
    outline: 3px solid var(--clr-accent);
    outline-offset: 3px;
}

/* Buttons */

.btn {
    display: inline-block;
    padding: .5em 2.5em;
    background-color: var(--clr-accent);
    color: var(--clr-dark);
    text-decoration: none;
    cursor: pointer;
    font-size: .8rem;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: var(--fw-bold);
    transition: transform 200ms ease-in-out, background-color 500ms;
}

.btn:hover {
    transform: scale(1.1);
}

/* Typography */

h1,
h2,
h3 {
    line-height: 1;
    margin: 0;
}

h1 { font-size: var(--fs-h1) }
h2 { font-size: var(--fs-h2) }
h3 { font-size: var(--fs-h3) }


.section__title {
    margin-bottom: .25em;
}

.section__title--intro,
.section__title--item {
    font-weight: var(--fw-reg);
}

.section__title--intro strong {
    display: block;
    color: var(--clr-light);
}

.section__title--item strong {
    display: block;
}

.name.dark {
    color: var(--clr-secondary-dark)
}

.section__subtitle {
    margin: 0;
    font-size: var(--fs-h3);
}

.section__subtitle--intro,
.section__subtitle--about,
.section__subtitle--item {
    background-color: var(--clr-accent);
    padding: .25em 1.5em;
    font-family: var(--ff-secondary);
    margin-bottom: 1em;
}

.section__subtitle--work {
    color: var(--clr-accent);
    font-weight: var(--fw-bold);
    margin-bottom: 2em;
}

/* header */

.header {
    background: rgba(255,255,255, 0);
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 1;
    display: flex;
    padding: 1em;
    z-index: 100;
}

.header-div {
    width: 100%;
    max-width: 90vw;
    text-align: left;
    font-family: var(--ff-secondary);
    padding: .25em .5em;
}

.nav {
    position: fixed;
    background-color: var(--clr-light);
    color: var(--clr-dark);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 100;
    transform: translateX(100%);
    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
    opacity: 0;
}

.nav.dark {
    background-color: var(--clr-secondary-dark)
}

.nav__list {
    list-style: none;
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    margin: 0;
    padding: 0;
}

.nav__link {
    color: var(--clr-dark);
    font-weight: var(--fw-bold);
    font-size: var(--fs-h2);
    text-decoration: none;
}

.nav__link:hover {
    color: var(--clr-accent);
}

.nav-toggle {
    padding: .5em;
    background: transparent;
    border: 0;
    cursor: pointer;
    position: absolute;
    right: 1em;
    top: 1em;
    z-index: 1000;
}

.nav-open .nav {
    transform: translateX(0%);
    opacity: 1;
}

@media (min-width: 600px) {
    .nav {
        width: 30vw;
        height: 200px;
        top: 0px;
        right: 0px;
        transform: translate(100vw, -200px);
    }

    .nav-open .nav {
        transform: translate(70vw, 0px)
    }

    .nav__link {
        color: inherit;
        font-weight: var(--fw-bold);
        font-size: var(--fs-h3);
        text-decoration: none;
    }
}



.nav-open .nav-toggle {
    position: fixed;
}

.nav-open .hamburger {
    transform: rotate(.625turn);
}

.nav-open .hamburger::before {
    transform: rotate(90deg) translateX(-6px);
}

.nav-open .hamburger::after {
    opacity: 0;
}

.hamburger {
    display: block;
    position: relative;
}

.hamburger,
.hamburger::before,
.hamburger::after {
    background: var(--clr-accent);
    width: 2em;
    height: 3px;
    border-radius: 1em;
    transition: transform 250ms ease-in-out;
}


.hamburger::before,
.hamburger::after {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
}

.hamburger::before { top: 6px; }
.hamburger::after { bottom: 6px; }

/* Portfolio Item */
.portfolio-item {
    position: relative;
}

.portfolio-item.dark {
    background-color: var(--clr-secondary-dark);
}

.item__img {
    box-shadow: var(--bs);
}

/*  Intro section  */

.intro {
    position: relative;
    background-image: url('/img/sunflowers.jpg');
    background-color: var(--clr-light);
    background-size: cover;
    height: 500px;
}

.intro.dark {
    background-image: url('/img/edisto.jpg');
}

.section__subtitle--intro,
.section__subtitle--item {
    display: inline-block;
}
/* ... */

